reverted back change in login page

--- a/src/app/main/auth/login/login.component.html
+++ b/src/app/main/auth/login/login.component.html
@@ -16,7 +16,7 @@
                 <div class="text-center mb-3">
                     <img src="assets/images/logo.png" alt="brand-logo" height="150" />
                 </div>
-                <h1 class="font-weight-bold mb-1 text-center ">Sign In-1</h1>
+                <h1 class="font-weight-bold mb-1 text-center ">Sign In</h1>
                 <ngb-alert [type]="'danger'" [dismissible]="false" *ngIf="error">
                     <div class="alert-body">
                         <p>{{ error }}</p>
